// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playground-image Basic renders as expected 1`] = `
<svg
  height={60}
  viewBox="0 0 60 60"
  width={60}
>
  <circle
    cx="29.4"
    cy="30.6"
    fill="#3F5B75"
    r="25"
  />
  <path
    d="M44.4 48.1s0-.1 0 0c0-.7-.1-1.5-.5-2.4L33.5 25.6h-3.7l-3.7-.1-10.4 20.1c-.4 1-.6 1.8-.5 2.5 0 2.4 6.5 4.4 14.7 4.4 7.9 0 14.4-1.9 14.5-4.4z"
    fill="#0E1519"
  />
  <path
    d="M43.4 43.8L33.3 24.5V17h.4c.4 0 .7-.3.7-.7 0-.4-.3-.7-.7-.7h-7.9c-.4 0-.7.3-.7.7s.3.7.7.7h.3v7.6L16.1 44c-.3.8-.5 1.4-.4 2v.3c.4 2.3 6.5 4.1 14.1 4.1 7.8 0 14.1-2 14.1-4.3 0-.6-.1-1.5-.5-2.3z"
    fill="#CDDCE8"
  />
  <path
    d="M39.3 42l-6.9-13.4h-4.9l-7 13.4c-.3.6-.4 1.2-.4 1.6 0 1.7 4.4 3 9.8 3 5.3 0 9.7-1.3 9.7-3 0-.5-.1-1-.3-1.6z"
    fill="#FFF"
  />
  <circle
    cx="31.1"
    cy="19.6"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="27"
    cy="8.6"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="29"
    cy="24"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="29"
    cy="15"
    fill="#FFF"
    r="1.8"
  />
  <circle
    cx="32.4"
    cy="11.1"
    fill="#FFF"
    r="1.4"
  />
</svg>
`;

exports[`playground-image Bigger renders as expected 1`] = `
<svg
  height={120}
  viewBox="0 0 60 60"
  width={120}
>
  <circle
    cx="29.4"
    cy="30.6"
    fill="#3F5B75"
    r="25"
  />
  <path
    d="M44.4 48.1s0-.1 0 0c0-.7-.1-1.5-.5-2.4L33.5 25.6h-3.7l-3.7-.1-10.4 20.1c-.4 1-.6 1.8-.5 2.5 0 2.4 6.5 4.4 14.7 4.4 7.9 0 14.4-1.9 14.5-4.4z"
    fill="#0E1519"
  />
  <path
    d="M43.4 43.8L33.3 24.5V17h.4c.4 0 .7-.3.7-.7 0-.4-.3-.7-.7-.7h-7.9c-.4 0-.7.3-.7.7s.3.7.7.7h.3v7.6L16.1 44c-.3.8-.5 1.4-.4 2v.3c.4 2.3 6.5 4.1 14.1 4.1 7.8 0 14.1-2 14.1-4.3 0-.6-.1-1.5-.5-2.3z"
    fill="#CDDCE8"
  />
  <path
    d="M39.3 42l-6.9-13.4h-4.9l-7 13.4c-.3.6-.4 1.2-.4 1.6 0 1.7 4.4 3 9.8 3 5.3 0 9.7-1.3 9.7-3 0-.5-.1-1-.3-1.6z"
    fill="#FFF"
  />
  <circle
    cx="31.1"
    cy="19.6"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="27"
    cy="8.6"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="29"
    cy="24"
    fill="#FFF"
    r="1.2"
  />
  <circle
    cx="29"
    cy="15"
    fill="#FFF"
    r="1.8"
  />
  <circle
    cx="32.4"
    cy="11.1"
    fill="#FFF"
    r="1.4"
  />
</svg>
`;
